@@ -12,41 +12,41 @@ import org.springframework.batch.core.scope.context.ChunkContext;
  */
 public class ItemCountListener implements ChunkListener {
 
-	private static final int DEFAULT_LOGGING_INTERVAL = 1000;
+    private static final int DEFAULT_LOGGING_INTERVAL = 1000;
 
-	private static final Logger LOGGER = LoggerFactory.getLogger(ItemCountListener.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(ItemCountListener.class);
 
-	private MessageFormat fmt = new MessageFormat("{0} items processed");
+    private MessageFormat fmt = new MessageFormat("{0} items processed");
 
-	private int loggingInterval = DEFAULT_LOGGING_INTERVAL;
+    private int loggingInterval = DEFAULT_LOGGING_INTERVAL;
 
-	@Override
-	public void beforeChunk(final ChunkContext context) {
-		// Nothing to do here
-	}
+    @Override
+    public void beforeChunk(final ChunkContext context) {
+        // Nothing to do here
+    }
 
-	@Override
-	public void afterChunk(final ChunkContext context) {
+    @Override
+    public void afterChunk(final ChunkContext context) {
 
-		final int count = context.getStepContext().getStepExecution().getReadCount();
+        final long count = context.getStepContext().getStepExecution().getReadCount();
 
-		// If the number of records processed so far is a multiple of the logging
-		// interval then output a log message.
-		if (count > 0 && count % loggingInterval == 0) {
-			LOGGER.info(fmt.format(new Object[] { new Integer(count) }));
-		}
-	}
+        // If the number of records processed so far is a multiple of the logging
+        // interval then output a log message.
+        if (count > 0 && count % loggingInterval == 0) {
+            LOGGER.info(fmt.format(new Object[] { Long.valueOf(count) }));
+        }
+    }
 
-	@Override
-	public void afterChunkError(final ChunkContext context) {
-		// Nothing to do here
-	}
+    @Override
+    public void afterChunkError(final ChunkContext context) {
+        // Nothing to do here
+    }
 
-	public void setItemName(final String itemName) {
-		fmt = new MessageFormat("{0} " + itemName + " processed");
-	}
+    public void setItemName(final String itemName) {
+        fmt = new MessageFormat("{0} " + itemName + " processed");
+    }
 
-	public void setLoggingInterval(final int loggingInterval) {
-		this.loggingInterval = loggingInterval;
-	}
+    public void setLoggingInterval(final int loggingInterval) {
+        this.loggingInterval = loggingInterval;
+    }
 }
